# sentinel

./: Cargo.toml  README.md  objective.json
src/: arguments.rs  diff.rs  display_control.rs  environment_variables.rs  llm.rs  main.rs  objective.rs  utilities.rs
