[package]
name = "sentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cchain = "0.3.42"
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
surfing = { version = "0.1.1", features = ["serde"] }
