[package]
name = "sentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["cargo", "derive", "string"] }
console = "0.15.11"
prettytable = "0.10.0"
rsfile = "0.1.2"
secretary = "0.2.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
surfing = { version = "0.1.1", features = ["serde"] }
